rsworkspace/crates/decider/trogon-decider/tests/ui/fail/missing_when.stderr
error[E0599]: no method named `then_error` found for struct `TestCase<TestCommand, trogon_decider::testing::NoHistory>` in the current scope
  --> tests/ui/fail/missing_when.rs:11:10
   |
 9 | /     TestCase::<TestCommand>::new()
10 | |         .given_no_history()
11 | |         .then_error(TestDecisionError::AlreadyRegistered);
   | |         -^^^^^^^^^^ method not found in `TestCase<TestCommand, trogon_decider::testing::NoHistory>`
   | |_________|
   |
   |
   = note: the method was found for `TestCase<C, trogon_decider::testing::When<<C as Decider>::Event, <C as Decider>::State, C>>`
